--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    						<a class="unsplash" href="https://github.com/Surya6032" target="_blank">
    							<i class="fab fa-github fa-2x"></i>
    						</a>
-   						<a class="instagram" href="https://www.instagram.com/surya_pratap_singh._/" target="_blank">
+   						<a class="instagram" href="https://www.instagram.com/surya.partap.singh/" target="_blank">
    							<i class="fab fa-instagram fa-2x"></i>
    						</a>
 
